Add instruction file path configuration and update handlers
- Added INSTRUCTION_FILE_PATH to .env.example and docker-compose.yml for instruction file management.
- Updated appsettings.json to include Instruction section for file path configuration.
- Modified Program.cs to configure InstructionOptions.
- Enhanced CallbackQueryHandler to read and display instruction text based on user interaction.
- Added a new button in KeyboardBuilder for accessing the instruction.

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,6 @@ BOT_TOKEN=your_bot_token_here
 
 # Admin Telegram ID (your Telegram user ID)
 ADMIN_ID=123456789
+
+# Path to instruction file (e.g. /app/instruction.txt in Docker)
+INSTRUCTION_FILE_PATH=/app/instruction.txt
