--- a/src/TaxCollectionTelegramBot/appsettings.json
+++ b/src/TaxCollectionTelegramBot/appsettings.json
@@ -10,6 +10,9 @@
     "Token": "YOUR_BOT_TOKEN_HERE",
     "AdminId": 123456789
   },
+  "Instruction": {
+    "FilePath": "instruction.txt"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=data/bot.db"
   }
